@@ -234,6 +234,7 @@ MAX_TESTSUITE_DIR_RETRIES=@max_testsuite_dir_retries@
 FLAT_FLOAT_ARRAY=@flat_float_array@
 FUNCTION_SECTIONS=@function_sections@
 AWK=@AWK@
+STDLIB_MANPAGES=@stdlib_manpages@
 
 
 ### Native command to build ocamlrun.exe
